# PantheonCore

bio_bim_agent/: README.md  pyproject.toml  requirements.txt
bio_bim_agent/.github/workflows/: tests.yml
bio_bim_agent/config/: llm_config.yaml  mcp_config.json
bio_bim_agent/dashboard/: streamlit_app.py
bio_bim_agent/src/bio_bim_agent/: __init__.py
bio_bim_agent/src/bio_bim_agent/agents/: __init__.py  registry.py
bio_bim_agent/src/bio_bim_agent/executors/: __init__.py  bim_executor_agent.py  mcp_client.py
bio_bim_agent/src/bio_bim_agent/models/: __init__.py  bio_building.py
bio_bim_agent/src/bio_bim_agent/orchestrator/: __init__.py  workflow.py
bio_bim_agent/src/bio_bim_agent/simulation/: __init__.py  growth_engine.py  material_db.py
bio_bim_agent/tests/: conftest.py  test_bim_executor_agent.py  test_bio_building_models.py  test_growth_engine.py  test_material_db.py  test_mcp_client.py  test_orchestrator.py
